...

    <string name="story_title">Story App</string>
    <string name="story_description">Description</string>
    <string name="story_date">2024-05-23</string>
    <string name="detail_story">Story Detail</string>

    <string name="onboarding_title">Welcome to Story App</string>
    <string name="onboarding_subtitle">An Online Story App</string>

    <string name="data_failed">Failed to Load Data</string>
    <string name="success_image">Success</string>
    <string name="empty_image">Please Select an Image First!!!</string>

...
